# Cocai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MOSAIC_MIGRATION_SUMMARY.md  README.md  chainlit.md  docker-compose.yaml  events.py  history.py  justfile  main.py  pyproject.toml  pytest.ini  scene.py  server.py  state.py  tmuxinator.yaml  tools.py  utils.py
.chainlit/: config.toml  schema.sql
.github/: copilot-instructions.md
agentic_tools/: __init__.py  create_character.py  illustrate_scene.py  misc.py  roll_dices.py
async_panes/: __init__.py  async_panes_utils.py  scene.py
docs/: configuration.md  play-auth-gating.md  react-mosaic-migration-guide.md  session-persistence-dev-guide.md  session-persistence.md
game_modules/: README.md
game_modules/clean-up-aisle-four/: toc.md
game_modules/clean-up-aisle-four/Clean-Up-Aisle-Four/: Action.md  Conclusion.md  Getting-the-Investigators-Involved.md  Handouts.md  Introduction.md  Investigation.md  Keepers-Background.md  Legal-Information.md  Mythos-Beings.md  NPCS.md  Weyport.md
game_modules/clean-up-aisle-four/Clean-Up-Aisle-Four/Action/: A-Lucky-Break.md  Carson.md  In-the-Store.md  Outside-Action.md  Solutions.md  The-Ghost-Pursuers.md  Working-for-a-Living.md
game_modules/clean-up-aisle-four/Clean-Up-Aisle-Four/Handouts/: Handout-1.md  Handout-2.md
game_modules/clean-up-aisle-four/Clean-Up-Aisle-Four/Investigation/: Convenience-Store-Mystery.md  History.md  Mabel-Wey.md  Police.md  The-Store.md  Wendy-Carson.md
game_modules/clean-up-aisle-four/Clean-Up-Aisle-Four/Mythos-Beings/: Lashing-Phantoms.md
prompts/: adventure_prompt.md  character_creation_prompt.md  system_prompt.md
public/: chainlit-auth-bridge.js  custom_chainlit.css  play-auth.css  play-auth.js  play.css  play.html  play.js
public/dice/: dice.js
src/: config.py  dice.jinja  events.py  game_state_storage.py  main.py  server.py  state.py  utils.py
src/agentic_tools/: __init__.py  create_character.py  illustrate_scene.py  image_cache.py  image_generation.py  misc.py
src/agents/: __init__.py  adventure.py  agent_factory.py  character_creation.py  game_fsm.py
src/async_panes/: README.md  async_panes_utils.py  history.py  pane_update_manager.py  scene.py
src/game_state/: data_models.py  load_and_save.py
tests/: conftest.py  test_agent_factory.py  test_async_panes_utils.py  test_config.py  test_env_bool.py  test_game_fsm.py  test_history_and_scene_helpers.py  test_image_cache.py  test_pane_update_manager.py  test_roll_dices.py  test_update_a_stat.py
(+2 files in other folders)
