[project]
name = "cocai"
version = "0.1.0"
description = "A chatbot that plays Call of Cthulhu (CoC) with you, powered by AI."
readme = "README.md"
# Arize Phonenix requires numba, which requires python<3.13.
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "arize-phoenix-otel>=0.4.1",
    "boto3>=1.35.39",
    "chainlit>=2.0.0",
    "cochar>=1.0.1",
    "llama-index-agent-openai>=0.3.0",
    "llama-index-core>=0.10.43",
    "llama-index-embeddings-ollama>=0.3.0",
    "llama-index-llms-ollama",
    "llama-index-llms-openai-like>=0.2.0",
    "llama-index-llms-openai>=0.2.12",
    "llama-index-tools-tavily-research>=0.2.0",
    "openinference-instrumentation-llama-index>=2",
    "opentelemetry-proto>=1.12.0",
    "rich>=13.8.0",
    "ruff>=0.6.3",
    "tomlkit>=0.13.2",
    "llama-index>=0.11.17",
    "llama-index-memory-mem0>=0.2.1",
    "jinja2>=3.1.5",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "llama-index-utils-workflow>=0.3.5",
        "sse-starlette>=1.8.1",
        "httpx>=0.27.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
