[project]
name = "cocai"
version = "0.1.0"
description = "A chatbot that plays Call of Cthulhu (CoC) with you, powered by AI."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.20.0",
    "arize-phoenix-otel>=0.4.1",
    "boto3>=1.35.39",
    "chainlit>=2.0.0",
    "cochar>=1.0.1",
    "llama-index-core>=0.14.18,<0.15",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.0",
    "llama-index-llms-openai-like>=0.7.1",
    "llama-index-llms-openai>=0.7.0,<0.8",
    "llama-index-tools-tavily-research>=0.5.0",
    "openinference-instrumentation-llama-index>=2",
    "opentelemetry-proto>=1.12.0",
    "rich>=13.8.0",
    "ruff>=0.6.3",
    "tomlkit>=0.13.2",
    "llama-index==0.14.18",
    "llama-index-memory-mem0>=1.0.0",
    "jinja2>=3.1.5",
    "llama-index-vector-stores-qdrant>=0.10.0",
    "llama-index-utils-workflow>=0.10.0",
    "sse-starlette>=1.8.1",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    # rname is pinned at 0.3.7 because of a breaking change in 1.0.0 that causes issues with Cochar.
    "rname~=0.3.7",
]

[dependency-groups]
dev = [
    "coverage-badge>=1.1.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "setuptools>=75.0.0,<81",
]

[tool.ruff]
cache-dir = ".cache/ruff"
